INSERCIÓN DE COMENTARIOS
Cordial saludo, la presente modificación permite la inserción de comentarios junto con comandos en assembler:

La presente contribución fue realizada por:

Juan Camilo Cuspoca - 20212005043
Estefanía Polo Molano -  2021200590
Julián Mateo Torres Pérez - 20201005091

--- a/index.html
+++ b/index.html
@@ -205,10 +205,13 @@ NOP
 
         function tokenize(code) {
             return code
-                .replace(/,\s*/g, ',') // Remove extra spaces after commas
-                .split(/[\s,]+/) // Split by any whitespace
-                .filter(token => token.length > 0); // Remove empty tokens
-                
+                .split('\n')  //Split code in lines
+                .map(line => line.split('#')[0])  //  Remove everything afer #
+                .map(line => line.split('//')[0])  //  Remove everything afer //
+                .join('\n')  // Join the lines
+                .replace(/,\s*/g, ',')  //  Remove extra spaces after comma
+                .split(/[\s,]+/)  // Split by spaces or commas
+                .filter(token => token.length > 0);  //Remove empty tokens  
         }
 
         function parse(tokens) {
