--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@ NOP
         }
         
 
-function executeInstruction(instruction) {
+
+        function executeInstruction(instruction) {
             const args = instruction.args.map(arg => {
                 if (arg.startsWith('[')) {
                     const parts = arg.slice(1, -1).split('+');
@@ -379,23 +380,31 @@ function executeInstruction(instruction) {
                     write_memory(args[0], args[1]);
                     break;
                 case 'ADD':
-                    registers[instruction.args[0]] = args[1] + args[2];
+                    registers[instruction.args[0]] = no_flags(args[1] + args[2]);
+                    break;
+                case 'ADDcc':
+                    registers[instruction.args[0]] = flags(args[1] + args[2]);
                     break;
                 case 'SUB':
-                    registers[instruction.args[0]] = args[1] - args[2];
+                registers[instruction.args[0]] = no_flags(args[1] - args[2]);
                     break;
                 case 'SUBcc':
-                    registers[instruction.args[0]] = args[1] - args[2];
-                    registers['FLAG'] = args[1] - args[2];
+                    registers[instruction.args[0]] = flags(args[1] - args[2]);
                     break;
                 case 'SMUL':
-                    registers[instruction.args[0]] = args[1] * args[2];
+                    registers[instruction.args[0]] = no_flags(args[1] * args[2]);
+                    break;
+                case 'SMULcc':
+                    registers[instruction.args[0]] = flags(args[1] * args[2]);
                     break;
                 case 'INC':
                     registers[instruction.args[0]] += 1;
                     break;
                 case 'DEC':
                     registers[instruction.args[0]] -= 1;
+                    break;
+                case 'SLL':
+                    registers[instruction.args[0]] = args[1] << args[2];
                     break;
                 case 'SETHI':
                     registers[instruction.args[0]] = args[1] << 10;
@@ -438,6 +447,55 @@ function executeInstruction(instruction) {
             }
             return null;
         }
+
+        function no_flags(resultado){
+            if (resultado >= 4294967296){ //2**32
+                return resultado % 4294967296;
+            }else if (resultado<0 && resultado>(-2147483648)){
+                resultado= (resultado % 4294967296) + 4294967296;
+            }else if(resultado<=(-2147483648)){
+                resultado= (resultado % 4294967296) + 4294967296;
+            }
+            return resultado;
+        }
+        function flags(resultado){// los numeros de registers['resultado'] van entre o y (2**32) -1, es obligacion de cada uno revisar que la operacion se cumple bien cuando los valores de los registros estan con signo
+            if (resultado >= 4294967296){ //2**32
+                registers['c']=1;
+                registers['n']=0;
+                registers['z']=0;
+                registers['v']=1;
+                return resultado % 4294967296;
+            } else if (resultado>= 2147483648 && resultado< 4294967296){
+                registers['c']=0;
+                registers['n']=1;
+                registers['z']=0;
+                registers['v']=1;
+            }else if (resultado<2147483648 && resultado>0){
+                registers['c']=0;
+                registers['v']=0;
+                registers['n']=0;
+                registers['z']=0;
+            }else if (resultado==0){
+                registers['z']=1;
+                registers['c']=0;
+                registers['n']=0;
+                registers['v']=0; 
+            }else if (resultado<0 && resultado>(-2147483648)){
+                registers['c']=1;
+                registers['n']=1;
+                registers['z']=0;
+                registers['v']=0;
+                resultado= (resultado % 4294967296) + 4294967296;
+            }else if(resultado<=(-2147483648)){
+                registers['c']=1;
+                registers['n']=0;
+                registers['z']=0;
+                registers['v']=1;
+                resultado= (resultado % 4294967296) + 4294967296;
+            }
+            return resultado;
+        }
+
 
         function step() {
             if (instructionPointer === 0) {
