--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@ NOP
 		case 'CALL':
 		    registers['R15'] = instructionPointer; // %o7
                     return args[0];
+	        case 'RETL':
+                    instructionPointer = registers['R15'];
+                    break;
                 case 'NOP':
                     break;
                 case 'malloc': //malloc Rd,  Cte
