--- a/index.html
+++ b/index.html
@@ -498,6 +498,10 @@ NOP
 	        case 'RETL':
                     instructionPointer = registers['R15'];
                     break;
+		case 'JMPL':
+	                registers[instruction.args[0]]=instructionPointer;
+	                instructionPointer = (args[1]+args[2])-1;
+                break;
                 case 'NOP':
                     break;
                 case 'malloc': //malloc Rd,  Cte
