--- a/index.html
+++ b/index.html
@@ -156,33 +156,22 @@
 <div class=ContainerText>
 
     <textarea id="codeInput" rows="15" cols="60">
-backend 0
-MOV R1,5
-SUBcc R2,R1,4
-SUBcc R2,R1,5
-SUBcc R2,R1,6
-ADDcc R2,R1,7
-SETHI R3,2000000
-SUBcc R2,R1,R3
-ADDcc R2,R1,R3
-SETHI R3,3000000
-SUBcc R2,R1,R3
-ADDcc R2,R1,R3
-SETHI R3,4194303
-ADDcc R2,R3,5
-ADDcc R2,R3,8191
+MOV R1,3
+CALL 10
+NOP
+ADD R1,R2,5
+CALL 7
+NOP
+ADD R3,R2,6
 NOP
 NOP
-backend 1
-malloc R5,16
-MOV R1,5
-SETHI R2,3407872
-ST [R2+172],31744
-ST [R2+136],R1
-ST [R2+128],R0
-LD R3,[R2+148]
-SUBcc R1,R1,1
-BzC -2
+NOP
+NOP
+ADD R2,R1,4
+RETL
+NOP
+NOP
+NOP
 NOP
     </textarea>
 
@@ -193,7 +182,7 @@ NOP
             <pre id="output"></pre>
         </div>
         <div class="flags-container">
-            <p id="o7">o7 : </p>
+            <p id="Instruction">Next Instruction : </p>
         </div>
         <!-- Flags como fila -->
         <div class="flags-container">
@@ -252,7 +241,7 @@ NOP
             "malloc", "backend",
         ];
 
-        const registers = {o7:null};
+        const registers = {RA:null};
         for (let i = 0; i <= 15; i++) {
             registers[`R${i}`] = 0;
         }
@@ -418,38 +407,20 @@ NOP
             let pcIncrement = 1;
 
             switch (instruction.op) {
-                case 'MOV':
-                    registers[instruction.args[0]] = args[1];
-                    break;
-                case 'LD':
-                    read_memory(args[1],instruction.args[0]);
-                    break;
-                case 'AND':
-                    registers[instruction.args[0]]= no_flags(registers[instruction.args[1]] & registers[instruction.args[2]]);
-                    break;
-                case 'OR':
-                    registers[instruction.args[0]] = args[1] | args[2];
-                    break;
-                case 'ANDN':
-                    registers[instruction.args[0]] = no_flags(registers[instruction.args[1]] & ~registers[instruction.args[2]]);
-                    break;
-                case 'ORN':
-                    registers[instruction.args[0]] = registers[instruction.args[1]] | (~args[2]);
-                    break;
-                case 'XOR':
-                    registers[instruction.args[0]] = no_flags(args[1] ^ args[2]);
-                    break;
-                case 'XNOR':
-                    registers[instruction.args[0]] = no_flags(~(args[1] ^ args[2]));
-                    break;
-                case 'ST':
-                    write_memory(args[0], args[1]);
-                    break;
                 case 'ADD':
                     registers[instruction.args[0]] = no_flags(args[1] + args[2]);
                     break;
                 case 'ADDcc':
                     registers[instruction.args[0]] = flags(args[1] + args[2]);
+                    break;
+                case 'AND':
+                    registers[instruction.args[0]]= no_flags(registers[instruction.args[1]] & registers[instruction.args[2]]);
+                    break;
+                case 'OR':
+                    registers[instruction.args[0]] =  no_flags(args[1] | args[2]);
+                    break;
+                case 'XOR':
+                    registers[instruction.args[0]] = no_flags(args[1] ^ args[2]);
                     break;
                 case 'SUB':
                 registers[instruction.args[0]] = no_flags(args[1] - args[2]);
@@ -457,72 +428,112 @@ NOP
                 case 'SUBcc':
                     registers[instruction.args[0]] = flags(args[1] - args[2]);
                     break;
+                case 'ANDN':
+                    registers[instruction.args[0]] = no_flags(registers[instruction.args[1]] & ~registers[instruction.args[2]]);
+                    break;
+                case 'ORN':
+                    registers[instruction.args[0]] = no_flags(registers[instruction.args[1]] | (~args[2]));
+                    break;
+                case 'XNOR':
+                    registers[instruction.args[0]] = no_flags(~(args[1] ^ args[2]));
+                    break;
+                case 'SLL':
+                    registers[instruction.args[0]] = no_flags(args[1] << args[2]);
+                    break;
+                case 'SRL':
+                    registers[instruction.args[0]] = no_flags(args[1] >>> args[2]);
+                    break;	
+                case 'SRA':
+                    registers[instruction.args[0]] = no_flags(args[1] >>  args[2]);
+                    break;
+                case 'BE': // Brinca si son iguales
+                    if (registers['Z']) {
+                        return args[0];
+                    }
+                    break;
+                case 'BLE': // Brinca si es menor o igual
+                    if (registers['Z'] || (registers['N'] ^ registers['V'])) {
+                        return args[0];
+                    }
+                    break;
+                case 'BL': // Brinca si es menor
+                    if ((registers['N'] ^ registers['V'])) {
+                        return args[0];
+                    }
+                    break;
+                case 'BLEU':
+                    if (registers['c'] || registers['z']) {
+                         return args[0];
+                    }
+                    break;
+                case 'BCS':
+                    if (registers['c']) {
+                         return args[0];
+                   }
+                    break;
+                case 'BNEG':
+                    if (registers['n'] ,7) { 
+                         return args[0];
+                    }
+                    break;
+                case 'BVS':
+                    if (registers['v'] ) {
+                        return args[0];
+                    }
+                    break;
+                case 'BA':
+                        return args[0];
+                    break;
+                case 'BNE':
+                    if (~registers['z']) {
+                        return args[0];
+                    }
+                    break;
+                case 'BG': // Brinca si es menor o igual
+                    if (~(registers['Z'] || (registers['N'] ^ registers['V']))) {
+                        return args[0];
+                    }
+                    break;
+                case 'BGE':
+                    if (~(registers['N'] ^ registers['V'])) {
+                        return args[0];
+                   }
+                    break;
+                case 'BGU': 
+                    if (~registers['c'] && ~registers['z']) {
+                        return args[0];
+                   }
+                    break;
+                case 'BCC':
+                    if (~registers['c']) {
+                        return args[0];
+                    }
+                    break;
+                case 'BPOS':
+                    if (~registers['n']) {
+                        return args[0];
+                    }
+                    break;
+                case 'BVC':
+                    if (~registers['v']) { // Si la bandera 'v' está limpia
+                        return args[0];
+                    }
+                    break;
+
+                case 'MOV':
+                    registers[instruction.args[0]] = args[1];
+                    break;
+                case 'LD':
+                    read_memory(args[1],instruction.args[0]);
+                    break;
+                case 'ST':
+                    write_memory(args[0], args[1]);
+                    break;
                 case 'SMUL':
                     registers[instruction.args[0]] = no_flags(args[1] * args[2]);
                     break;
                 case 'SMULcc':
                     registers[instruction.args[0]] = flags(args[1] * args[2]);
-                    break;
-                case 'INC':
-                    registers[instruction.args[0]] += 1;
-                    break;
-                case 'DEC':
-                    registers[instruction.args[0]] -= 1;
-                    break;
-                case 'BLEU':
-                    if (registers['c'] || registers['z']) {
-                        return args[0];
-                    }
-                    break;
-                case 'SRA':
-                    registers[instruction.args[0]] = flags(args[1]/(2*args[2]));
-                    break;
-
-                case 'SLL':
-                    registers[instruction.args[0]] = no_flags(args[1] << args[2]);
-                    break;
-                case 'SRL':
-                    registers[instruction.args[0]] = no_flags(args[1] >> args[2]);
-                    break;	
-                case 'BCS':
-                    if (registers['c'] === 1) {
-                    instructionPointer += args[0];
-                        } else {
-                        instructionPointer++;
-                        }
-                    break;
-                case 'BGU': // Laura Sofía Ramirez Laiton
-                    if (registers['c'] === 0 && registers['z'] === 0) {
-                        instructionPointer += args[0]; // Salta si C = 0 y Z = 0
-                    } else {
-                        instructionPointer++;
-                    }
-                    break;
-                case 'BCC': // Damyan Leonardo Leon Gaona
-                    if (registers['c'] === 0) {
-                       instructionPointer += args[0]; // Salta si C = 0
-                    } else {
-                        instructionPointer++;
-                    }
-                    break;
-                case 'BPOS': // Helder Andrés Rodríguez Rosero
-                    if (registers['n'] === 0) {
-                        instructionPointer += args[0]; // Salta si N = 0, lo que significa que el número es positivo
-                    } else {
-                        instructionPointer++;
-                    }
-                    break;
-                case 'BNEG':
-                    if (registers['n'] === 1) { 
-                        instructionPointer += args[0]; // Realiza un salto relativo si N es 1
-                    } else {
-                        instructionPointer++;
-                    }
-                    break;
-                case 'BGE':
-                    if (registers['FLAG'] >= 0) {
-                        return args[0];
-                    }
                     break;
                 case 'SETHI':
                     registers[instruction.args[0]] = args[1] << 10;
@@ -543,42 +554,18 @@ NOP
                         return args[0];
                     }
                     break;
-                case 'BA':
+
+                //Test
+                case 'CALL':
+                    const returnAddress = instructionPointer + 1;
+                    registers['RA'] = returnAddress;
                     return args[0];
                     break;
-                case 'BVC':
-                    if (registers['v'] === 0) { // Si la bandera 'v' está limpia
-                    instructionPointer += args[0]; // Salta a la dirección relativa
-                    }
-                    break;
+                case 'RETL':
+                    return registers['RA'] + 1 - instructionPointer
+                //
 
-                case 'BNE':
-                    if (registers['z'] !== 1) {
-                        return args[0]; 
-                    }
-                    break;
-                case 'BVS':
-                    if (registers['v'] === 1) {
-                        return args[0]; 
-                    }
-                    break;
-                case 'BE': // Brinca si son iguales
-                    if (registers['Z'] === 1) {
-                        pcIncrement = args[0]; // Salto relativo
-                    }
-                    break;
 
-                case 'BLE': // Brinca si es menor o igual
-                    if (registers['Z'] === 1 || (registers['N'] ^ registers['V']) === 1) {
-                        pcIncrement = args[0]; // Salto relativo
-                    }
-                    break;
-
-                case 'BL': // Brinca si es menor
-                    if ((registers['N'] ^ registers['V']) === 1) {
-                        pcIncrement = args[0]; // Salto relativo
-                    }
-                    break;
 
                 case 'NOP':
                     break;
@@ -601,27 +588,21 @@ NOP
                     console.log(`Unknown instruction: ${instruction.op}`);
             }
             return null;
-        }
+		}
 
-        function no_flags(resultado){
-			console.log("resultdo no flag in", resultado)
-			resultado = resultado % 2**32
-			if(resultado<0){
-                resultado+=  2**32;
-            }
-			console.log("resultdo no flag out", resultado)
-            return resultado;
-        }
-        function flags(resultado){// los numeros de registers['resultado'] van entre o y (2**32) -1, es obligacion de cada uno revisar que la operacion se cumple bien cuando los valores de los registros estan con signo
-			console.log("resultdo  flag in", resultado)
-            registers['c'] = (resultado >= 2**32) || (resultado < 0);
-			registers['v'] = (resultado >= 2**31) || (resultado < -(2**31));
-			resultado=no_flags(resultado);
-			registers['n'] = resultado >= 2**31;
-			registers['z'] = resultado == 0;
-            updateRegisters(registers);
-			console.log("resultdo flag out", resultado)
-            return resultado;
+		function no_flags(n) {
+			return n >>> 0;
+		}
+		function flags(resultado){// los numeros de registers['resultado'] van entre o y (2**32) -1, es obligacion de cada uno revisar que la operacion se cumple bien cuando los valores de los registros estan con signo
+				console.log("resultdo  flag in", resultado)
+				registers['c'] = (resultado >= 2**32) || (resultado < 0);
+				registers['v'] = (resultado >= 2**31) || (resultado < -(2**31));
+				resultado=no_flags(resultado);
+				registers['n'] = resultado >= 2**31;
+				registers['z'] = resultado == 0;
+				updateRegisters(registers);
+				console.log("resultdo flag out", resultado)
+				return resultado;
         }
 
 
@@ -641,7 +622,7 @@ NOP
             }
 
             if (instructionPointer < parsed.length) {
-                const output = 'Executing: '+parsed[instructionPointer].op + parsed[instructionPointer].args.join(", ")+'\\n';
+                const output = 'Executing: '+parsed[instructionPointer].op +" "+ parsed[instructionPointer].args.join(", ")+'\n'+'Instruction:'+instructionPointer+'\n';
                 
                 document.getElementById('output').textContent = output; 
                 
@@ -661,7 +642,7 @@ NOP
 
         function updateRegisterTable() {
             const table = document.getElementById('registerTable');
-            document.getElementById("o7").textContent = "%o7:" +registers.o7;
+            document.getElementById("Instruction").textContent = "Next Instruction:" +instructionPointer;
             table.innerHTML = '';
             for (const [reg, value] of Object.entries(registers)) {
 				let signedValue=value>=2**31?value-2**32:value;
