--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ NOP
     <br>
     <table>
         <thead>
-            <tr><th>Register</th><th>Signed</th><th>Unsigned</th><th>Hexadecimal</th><th>Binario</th></tr>
+            <tr><th>Register</th><th>Signed</th><th>Unsigned</th><th>Hexadecimal</th><th>Binary</th></tr>
         </thead>
         <tbody id="registerTable">
         </tbody>
