--- a/index.html
+++ b/index.html
@@ -532,6 +532,9 @@ NOP
                 case 'ST':
                     write_memory(args[0], args[1]);
                     break;
+                case 'SDIV':
+                    registers[instruction.args[0]] = no_flags(args[1] // args[2]);
+                    break;
                 case 'SMUL':
                     registers[instruction.args[0]] = no_flags(args[1] * args[2]);
                     break;
